feat(config): 重构配置管理与版本控制系统，增强稳定性与可维护性
- 删除过时的测试类与冗余代码，清理项目结构
- 新增配置元数据与版本信息实体类，支持细粒度版本追踪
- 重构 ConfigurationService，支持并发控制、配置比较与重复请求去重
- 增强版本创建与删除逻辑，增加完整性校验与错误恢复机制
- 优化实例管理接口，统一版本控制行为，简化参数结构
- 移除 TracingSamplingController 中的回滚接口，统一由版本系统处理
- 前端版本管理界面增强操作确认与错误提示交互体验
- 新增多个工具类与 DTO，提升代码可读性与可维护性
- 修复多个控制器中 PathVariable 注解参数未命名的问题
- 优化安全过滤器逻辑，增强未认证请求的处理
- 统一 Jackson 配置，提取 JacksonHelper 工具类
- 配置初始化逻辑增强，避免重复初始化
- 移除配置备份与恢复相关接口（由版本系统替代）
- 增强前端版本管理与配置合并界面用户体验
- 修复多个细节问题与潜在异常处理缺陷